--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       </a>
 
       <!-- YouTube -->
-      <a class="btn btn-youtube" href="https://www.youtube.com" role="button">
+      <a class="btn btn-youtube" href="https://youtube.com/@ruvalist?si=sdWtZ2nS8QweMBNO" role="button">
         <span class="logo" aria-hidden>
           <svg width="20" height="14" viewBox="0 0 24 24" fill="#fff" xmlns="http://www.w3.org/2000/svg"><path d="M23.5 6.2s-.2-1.7-.8-2.4c-.8-.8-1.7-.8-2.1-.9C16.8 2.5 12 2.5 12 2.5s-4.8 0-8.6.4c-.4 0-1.3 0-2.1.9-.6.7-.8 2.4-.8 2.4S0 8 0 9.8v2.4c0 1.8.2 3.6.2 3.6s.2 1.7.8 2.4c.8.8 1.9.8 2.4.9 1.7.2 7.1.4 8.6.4s4.8-.1 8.6-.4c.4 0 1.3 0 2.1-.9.6-.7.8-2.4.8-2.4s.2-1.7.2-3.4V9.8c0-1.8-.2-3.6-.2-3.6zM9.8 15.6V8.4l6.4 3.6-6.4 3.6z"/></svg>
         </span>
@@ -127,9 +127,10 @@
     </div>
 
     <div class="footer">
-      <div>ruvalist</div>
+      <div>Ruvalist Sosyal Medya Hesapları</div>
       <div style="opacity:.7;font-size:12px">© 2025</div>
     </div>
   </main>
 </body>
 </html>
+
